(Final Project): Day 3: fixed footer socials alignment

--- a/Week 2/2 Projects/3 Final Project/Day 3/style.css
+++ b/Week 2/2 Projects/3 Final Project/Day 3/style.css
@@ -1250,6 +1250,7 @@ header {
 
 .footer__socials {
   display: flex;
+  align-items: center;
 }
 
 .fa-facebook-f {
